--- a/css/main.css
+++ b/css/main.css
@@ -83,10 +83,6 @@ a:hover {
 	padding: 10px 0;
 }
 
-#mt-header .mt-bottom-bar .mt-icon-list {
-	padding: 0 12px 0 0;
-}
-
 #mt-header .container-fluid {
 	margin: 0 auto;
 	max-width: 1485px;
@@ -144,83 +140,6 @@ a:hover {
 
 .mt-bottom-bar .mt-logo img {
 	display: block;
-}
-
-.mt-bottom-bar .mt-icon-list {
-	margin: 4px 0 0;
-	padding: 0;
-	float: right;
-	font-size: 24px;
-	list-style: none;
-}
-
-.mt-bottom-bar .mt-icon-list li {
-	position: relative;
-	margin: 5px 0 0 15px;
-	display: inline-block;
-	vertical-align: middle;
-}
-
-.mt-bottom-bar .mt-icon-list li > a {
-	color: #2f2f2f;
-}
-
-.mt-bottom-bar .mt-icon-list li > a:hover {
-	color: #ff6060;
-	text-decoration: none;
-}
-
-.mt-bottom-bar .mt-icon-list li.drop.open > a {
-	z-index: 5;
-	color: #fff;
-}
-
-.mt-bottom-bar .mt-icon-list li.drop.open > a:after {
-	width: 0;
-	top: 83%;
-	left: 50%;
-	height: 0;
-	content: " ";
-	margin-left: -13px;
-	position: absolute;
-	pointer-events: none;
-	border: solid transparent;
-	border-color: rgba(255, 255, 255, 0);
-	border-bottom-color: #fff;
-	border-width: 13px;
-}
-
-.mt-bottom-bar .mt-icon-list li.open .mt-drop {
-	opacity: 1;
-	visibility: visible;
-}
-
-.mt-bottom-bar .mt-icon-list li.open .mt-mdropover {
-	opacity: 1;
-	visibility: visible;
-}
-
-.mt-bottom-bar .mt-icon-list.right {
-	float: left;
-}
-
-.mt-bottom-bar .mt-icon-list.right .bar-opener .bar {
-	float: left;
-}
-
-.mt-bottom-bar .mt-icon-list .mt-drop {
-	top: 100%;
-	z-index: 2;
-	opacity: 0;
-	width: 380px;
-	right: -49px;
-	position: absolute;
-	visibility: hidden;
-}
-
-.mt-bottom-bar .mt-icon-list .mt-drop .mt-drop-sub {
-	margin: 18px 0 0;
-	background: #fff;
 }
 
 .mt-bottom-bar .cart-opener {
@@ -425,6 +344,20 @@ a:hover {
 	color: #ff6060;
 }
 
+.overlay {
+	position: absolute;
+	top: 40%;
+	padding: 10px 20px;
+	background: rgba(255,255,255, 0.5);
+}
+
+.product-overlay {
+	position: absolute;
+	top: 50%;
+	padding: 10px 20px;
+	background: rgba(255,255,255, 0.5);
+}
+
 /*------------------------------------------------------------------
 6. Nav / #nav
 -------------------------------------------------------------------*/
@@ -446,7 +379,7 @@ a:hover {
 #nav > ul > li {
 	position: relative;
 	vertical-align: top;
-	margin: 0 36px 0 7px;
+	margin: 0 24px 0 7px;
 	display: inline-block;
 }
 
