--- a/css/main.css
+++ b/css/main.css
@@ -134,10 +134,6 @@ a:hover {
 	text-decoration: none;
 }
 
-.mt-bottom-bar .mt-logo {
-	float: left;
-}
-
 .mt-bottom-bar .mt-logo img {
 	display: block;
 }
@@ -1039,7 +1035,6 @@ a:hover {
 
 .mt-mainslider2 {
 	max-width: 1460px;
-	margin: 0 auto 13px;
 }
 
 .mt-mainslider2 .holder {
@@ -1051,89 +1046,6 @@ a:hover {
 	display: block;
 	width: 100%;
 	height: auto;
-}
-
-.mt-mainslider2 .caption {
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	position: absolute;
-}
-
-.mt-mainslider2 .caption.add h1 {
-	font-size: 58px;
-}
-
-.mt-mainslider2 .caption.add h2 {
-	letter-spacing: 9px;
-	margin: 0 -10px 8px 0;
-	font: 200 58px/60px "Source Sans Pro", sans-serif;
-}
-
-.mt-mainslider2 .caption.add2 h1 {
-	font-size: 58px;
-	line-height: 60px;
-	font-family: "Source Sans Pro", sans-serif;
-}
-
-.mt-mainslider2 .caption.add2 h2 {
-	letter-spacing: -1px;
-	margin: 4px 0 28px -2px;
-	font: 200 58px/60px "Source Sans Pro", sans-serif;
-}
-
-.mt-mainslider2 .c1 {
-	display: table;
-	width: 100%;
-	height: 100%;
-}
-
-.mt-mainslider2 .c2 {
-	display: table-cell;
-	vertical-align: middle;
-	width: 100%;
-}
-
-.mt-mainslider2 .text {
-	width: 52%;
-	float: left;
-	padding: 0 15px;
-	padding: 0 15px 92px 97px;
-}
-
-.mt-mainslider2 .text.right {
-	float: right;
-	padding: 0 15px;
-	text-align: center;
-}
-
-.mt-mainslider2 .text.right .txt {
-	margin: 0 auto;
-}
-
-.mt-mainslider2 .price {
-	color: #535353;
-	display: block;
-	font: 28px/30px "Montserrat", sans-serif;
-}
-
-.mt-mainslider2 .price sub {
-	bottom: 0;
-	font-size: 19px;
-}
-
-.mt-mainslider2 .txt {
-	max-width: 65%;
-}
-
-.mt-mainslider2 .title {
-	display: block;
-	color: #818182;
-	margin: 0 0 12px;
-	letter-spacing: 4px;
-	text-transform: uppercase;
-	font: 600 14px/16px "Source Sans Pro", sans-serif;
 }
 
 .mt-mainslider2 .sub-title {
@@ -1149,18 +1061,6 @@ a:hover {
 	color: #3b3b3b;
 	margin: 0 0 -10px;
 	font: 700 65px/70px "Montserrat", sans-serif;
-}
-
-.mt-mainslider2 h2 {
-	margin: 0;
-	color: #7a7a7a;
-	font: 700 51px/60px "Montserrat", sans-serif;
-}
-
-.mt-mainslider2 p {
-	margin: 0;
-	color: #818182;
-	font: italic 300 16px/20px "Source Sans Pro", sans-serif;
 }
 
 /*------------------------------------------------------------------
@@ -1380,11 +1280,8 @@ a:hover {
 -------------------------------------------------------------------*/
 
 .mt-productsc {
-	padding: 86px 0 0;
-}
-
-.mt-productsc .mt-heading {
-	margin-bottom: 40px;
+	padding: 100px 0 0;
+	margin-top: -50px;
 }
 
 /*------------------------------------------------------------------
@@ -1428,12 +1325,6 @@ a:hover {
 	color: #383838;
 }
 
-.mt-contact-detail.content-info {
-	margin: 0 auto;
-	background: none;
-	max-width: 1059px;
-}
-
 .mt-contact-detail .icon {
 	display: block;
 	margin: 0 0 25px;
@@ -1459,62 +1350,14 @@ a:hover {
 	margin: 0;
 }
 
-.mt-contact-detail .txt-wrap {
-	font-size: 16px;
-	line-height: 23px;
-	font-weight: 300;
-	overflow: hidden;
-	margin: 0 0 50px;
-	color: #383838;
-}
-
-.mt-contact-detail .txt-wrap h2 {
-	font-size: 30px;
-	line-height: 33px;
-	font-weight: 600;
-	margin: 0 0 28px;
-	color: #383838;
-}
-
-.mt-contact-detail .txt-wrap p {
-	margin: 0 0 23px;
-}
-
-.mt-contact-detail .contact-txt {
-	font-size: 14px;
-	line-height: 16px;
-	font-weight: 200;
-	overflow: hidden;
-}
-
-.mt-contact-detail .contact-txt li {
-	float: left;
-	margin: 0 40px 20px 0;
-}
-
-.mt-contact-detail .contact-txt strong {
-	font-weight: 600;
-	font-size: 16px;
-	line-height: 20px;
-	text-transform: capitalize;
-	display: block;
-	margin: 0 0 11px;
-}
-
-.mt-contact-detail h2 {
-	font-weight: 600;
-	font-size: 16px;
-	line-height: 20px;
-	display: block;
-	margin: 0 0 11px;
-}
 
 /*------------------------------------------------------------------
 14. Mt About Section / .mt-about-sec
 -------------------------------------------------------------------*/
 
 .mt-about-sec {
-	padding: 86px 0 0;
+	padding: 100px 0 0;
+	margin-top: -50px;
 }
 
 .mt-about-sec .txt {
@@ -1527,47 +1370,16 @@ a:hover {
 }
 
 .mt-about-sec .txt p {
-	margin: 0 0 37px;
-}
-
-.mt-about-sec .txt strong {
-	display: block;
-	font-size: 24px;
-	line-height: 26px;
-	font-weight: 600;
+	padding: 24px;
 }
 
 .mt-about-sec h2 {
 	font-size: 30px;
 	line-height: 33px;
 	font-weight: bold;
-	margin: 0 0 50px;
 	font-family: "Montserrat", sans-serif;
 	text-transform: uppercase;
 	color: #494949;
-}
-
-.mt-about-sec .social-network.social-icon {
-	font-size: 18px;
-	line-height: 20px;
-}
-
-.mt-about-sec .social-network li {
-	display: inline-block;
-	vertical-align: middle;
-	margin: 0 12px 0 0;
-	font-size: 18px;
-	line-height: 20px;
-}
-
-.mt-about-sec .mt-follow-holder .title {
-	display: block;
-	font-size: 13px;
-	line-height: 18px;
-	font-family: "Montserrat", sans-serif;
-	margin: 0 0 15px;
-	font-weight: 700;
-	color: #575757;
 }
 
 /*------------------------------------------------------------------
@@ -1576,20 +1388,19 @@ a:hover {
 
 .mt-heading {
 	color: #a0a0a0;
-	margin: 0 0 12px;
+	margin: 0 0 24px;
 	letter-spacing: 4px;
 	font: 700 14px/20px "Source Sans Pro", sans-serif;
 }
 
 .mt-heading .heading {
 	color: #3a3a3a;
-	margin: 0 0 2px;
 	letter-spacing: 0;
 	font: 700 26px/30px "Montserrat", sans-serif;
 }
 
-.mt-heading p {
-	margin: 0;
+.product-name {
+	font-size: 22px;
 }
 
 .bg-grey {
@@ -1642,7 +1453,8 @@ a:hover {
 }
 
 .mt-logo {
-	width: 80px;	
+	width: 100px;	
+	margin-left: 20px;
 }
 
 @font-face {
