Update header design

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,8 +2,13 @@
 	.hidden-sm {
 		display: none !important;
 	}
-	.mt-logo {
-		margin: 0 auto;
+
+	#mt-header .mt-bottom-bar {
+		padding: 10px 0;
+	}
+
+	.main-caption {
+		font-size: 26px;
 	}
 }
 
@@ -20,27 +25,6 @@
 }
 
 @media only screen and (max-width: 1199px) {
-	.banner {
-		width: 47%;
-	}
-
-	.mt-bottom-bar {
-		padding: 42px 0;
-	}
-
-	.mt-bottom-bar .mt-sh-cart {
-		width: 160px;
-		margin: 0 0 0 15px;
-	}
-
-	.mt-bottom-bar .mt-nav-box {
-		width: 62%;
-	}
-
-	.mt-bottom-bar .mt-search-box {
-		width: 43.5%;
-	}
-
 	br {
 		display: block;
 	}
@@ -59,81 +43,6 @@
 		padding-bottom: 30px;
 	}
 
-	.mobile-active #nav {
-		left: 0;
-		opacity: 1;
-		visibility: visible;
-	}
-
-	#nav .s-drop {
-		padding: 0;
-		opacity: 1;
-		width: 100%;
-		max-height: 0;
-		overflow: hidden;
-		position: static;
-		visibility: visible;
-	}
-
-	#nav .s-drop.open {
-		max-height: 999px;
-	}
-
-	#nav .s-drop ul {
-		border: 0 !important;
-		padding: 0 !important;
-	}
-
-	#nav .s-drop ul li {
-		border: 0 !important;
-	}
-
-	#nav .s-drop ul li:hover .s-drop {
-		max-height: 999px;
-	}
-
-	#nav .s-drop a {
-		vertical-align: top;
-		display: inline-block;
-	}
-
-	#nav .s-drop ul > li.drop:before {
-		display: none;
-	}
-
-	#nav .s-drop ul > li.drop > a {
-		position: relative;
-	}
-
-	#nav .s-drop ul > li.drop > a:before {
-		top: -1px;
-		right: -20px;
-		color: #2e2e2e;
-		font-size: 14px;
-		content: "\f105";
-		position: absolute;
-		-moz-transform: rotate(90deg);
-		-ms-transform: rotate(90deg);
-		-o-transform: rotate(90deg);
-		-webkit-transform: rotate(90deg);
-		font-family: "FontAwesome";
-	}
-
-	#nav .s-drop .s-drop {
-		opacity: 1 !important;
-		position: static !important;
-		visibility: visible !important;
-	}
-
-	.mt-bottom-bar .mt-nav-box {
-		width: 100px;
-	}
-
-	.mt-bottom-bar .mt-search-box {
-		width: 53.5%;
-		margin: 4px 1% 0 0;
-	}
-
 	br {
 		display: none;
 	}
@@ -141,15 +50,6 @@
 	.mt-mainslider2 h1 {
 		font-size: 45px;
 		line-height: 50px;
-	}
-
-	.banner .holder {
-		padding: 24px 15px 10px 10px;
-	}
-
-	.banner .holder .btn-shop {
-		right: 20px;
-		bottom: 25px;
 	}
 }
 
@@ -162,68 +62,10 @@
 		padding-top: 0 !important;
 	}
 
-	.banner {
-		width: 100%;
-		margin: 0 0 20px;
-		overflow: hidden;
-	}
-
-	.banner-frame img {
-		width: 100%;
-		max-width: inherit;
-	}
-
-	.banner-frame .holder img {
-		width: auto;
-	}
-
 	.mt-bottom-bar {
 		padding: 15px 0;
 	}
 
-	.mt-bottom-bar .mt-sh-cart {
-		width: 42px;
-		height: 34px;
-	}
-
-	.mt-bottom-bar .mt-sh-cart strong + span,
-	.mt-bottom-bar .mt-sh-cart strong {
-		display: none;
-	}
-
-	.mt-bottom-bar .mt-sh-cart2 {
-		width: 73px;
-	}
-
-	.mt-bottom-bar .mt-search-box {
-		display: none;
-	}
-
-	.mt-side-menu {
-		width: 270px;
-		transform: translateX(270px);
-		-ms-transform: translateX(270px);
-		-webkit-transform: translateX(270px);
-	}
-
-	.right-side .mt-side-menu {
-		transform: translateX(-270px);
-		-ms-transform: translateX(-270px);
-		-webkit-transform: translateX(-270px);
-	}
-
-	.side-col-active .w1 {
-		transform: translateX(-270px);
-		-ms-transform: translateX(-270px);
-		-webkit-transform: translateX(-270px);
-	}
-
-	.right-side.side-col-active .w1 {
-		transform: translateX(270px);
-		-ms-transform: translateX(270px);
-		-webkit-transform: translateX(270px);
-	}
-	
 	#mt-footer .bank-card-2.pull-left {
 		margin: 0;
 	}
@@ -262,24 +104,6 @@
 	
 	.hidden-xs {
 		display: none !important;
-	}
-}
-
-@media only screen and (max-width: 550px) {
-	.mt-bottom-bar .mt-top-social {
-		display: none;
-	}
-}
-
-@media only screen and (max-width: 479px) {
-	.banner-frame h2 {
-		font-size: 18px;
-		line-height: 22px;
-		letter-spacing: 0;
-	}
-
-	.banner-frame .btn-shop {
-		margin: 0;
 	}
 }
 
