--- a/css/main.css
+++ b/css/main.css
@@ -386,6 +386,16 @@ a:hover {
 	margin-top: -50px;
 }
 
+.mt-productsc h2 {
+	font-size: 30px;
+	line-height: 33px;
+	font-weight: bold;
+	font-family: "Montserrat", sans-serif;
+	text-transform: uppercase;
+	color: #494949;
+	margin: 28px 0;
+}
+
 /*------------------------------------------------------------------
 33. js tab hidden / .js-tab-hidden
 -------------------------------------------------------------------*/
